cmake_minimum_required(VERSION 3.26)
project(clasestring)

set(CMAKE_CXX_STANDARD 14)

add_executable(clasestring
        cadenasstl.cpp)
add_executable(funcionesdebase funcionesdebase.cpp)
add_executable(integracionc++ integracionc++.cpp)
add_executable(funcionesespecificas funcionesespecificas.cpp)
add_executable(manipulacionstrings manipulacionstrings.cpp)
